Added about page

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # SEO settings
 title: Idarlington's SPACE
 stylished_title: Idarlington's <span>SPACE</span>
-description: "Random thougths and <span>TILs</span>."
+description: "Random thougths and TILs."
 keywords: "TIL, web, coding, scala, nigeria, javascript, devops"
 url: http://idarlington.github.io
 baseurl: ""
