--- a/_config.yml
+++ b/_config.yml
@@ -52,5 +52,6 @@ project:
 gems:
   #- bourbon
   - jekyll-paginate
+  - jekyll-sitemap
 
 exclude: ["gulp", "node_modules", "bower", "bower_components", "config.rb", "src", "Gemfile", "Gemfile.lock", ".rvmrc", ".rbenv-version", "package.json", "gulpfile.js", "README.md", "Rakefile", "changelog.md"]
