--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Idarlington's SPACE
 stylished_title: Idarlington's <span>SPACE</span>
 description: "Random thougths and TILs."
 keywords: "TIL, web, coding, scala, nigeria, javascript, devops"
-url: http://idarlington.github.io
+url: https://idarlington.github.io
 baseurl: ""
 
 google_analytics: UA-50842645-1
