Remove SPACE tag

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 # SEO settings
-title: Idarlington's SPACE
-stylished_title: Idarlington's <span>SPACE</span>
+title: Idarlington
+stylished_title: Idarlington
 description: "Random thougths and TILs."
 keywords: "TIL, web, coding, scala, nigeria, javascript, devops"
 url: https://idarlington.github.io
