Fix disqus issue

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ sass:
 # Author settings
 author:
   name     : IKenna D. Ogbajie
-  job      : Software Developer
+  job      : Software Engineer
   thumb    : https://en.gravatar.com/userimage/42626876/ff31b74f207c61cc9d2d1d9196fd0080.jpg?size=120
   email    : iogbajie@gmail.com
   url      : http://idarlington.github.io
